이력서 업데이트

--- a/index.html
+++ b/index.html
@@ -53,19 +53,27 @@
           <h2>경력(work)</h2>
           <!-- 경력 내용 수정 -->
             <dl>
-              <dt>회사 A : 2018 ~ 2020</dt>
-              <dd>회사에서 맡았던 업무</dd>
+              <dt>HL 만도 : 2015.12 ~ 재직중</dt>
+              <dd>UDS & OBDii 진단 통신</dd>
               <dd>기타 사항</dd>
             </dl>
             <dl>
-              <dt>회사 B : 2020 ~ 2022</dt>
-              <dd>회사에서 맡았던 업무</dd>              
+              <dt>현대성우 : 2014.12 ~ 2015.12</dt>
+              <dd>BMS HW&SW</dd>              
             </dl>  
+            <dl>
+              <dt>디지파츠 : 2018.01 ~ 2014.10</dt>
+              <dd>카셰어링 단말기 HW&FW</dd>              
+            </dl>              
+            <dl>
+              <dt>LG이노텍 : 2017.09 ~ 2017.12</dt>
+              <dd>CAN 통신을 이용한 BLCD 컨트롤러</dd>              
+            </dl>                          
         </section>
         <section>
           <h2>다룰 수 있는 기술(skills)</h2>
           <!-- 자신있는 기술 수정 -->
-          <p>HTML/CSS</p>
+          <p>Embedded C Language</p>
           <p>Javascritpt</p>
           <p>React</p>
           <p>Github</p>
